# weaseltree

./: .gitignore  README.md  pyproject.toml
src/weaseltree/: __init__.py
