[project]
name = "weaseltree"
version = "0.1.0"
description = "A console application"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
weaseltree = "weaseltree:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
